@@ -4,6 +4,7 @@ Version X.X (XXXX-XX-XX)
      New: Added a method to set the preferred visible row count so that you can make the viewer default
           to a larger (or smaller) size without having to calculate font sizes.
      New: Added a method to set the selection start and end at the same time.
+     New: Added methods to assist in moving focus into the location bar.
 
    Fixed: Fixed the font specified in the UI not taking effect.
    Fixed: Fixed interpreting certain 64-bit values.
